--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %> · Crypto Market</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="http://rmoreno.me/css/main.css">
   </head>
   <body>
     <noscript>
